# open_phri_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: controller.launch
msg/: parameters.msg  state.msg
src/: add.cpp
src/controller/: main.cpp
srv/: add.srv  goto_joint_position.srv
